<resources>
    <string name="app_name">SmallTeamAccount</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_us">关于我们</string>

    <string name="loading">加载中……</string>
    <string name="account_list">账单列表</string>
    <string name="add_account">添加账单</string>
    <string name="user_balance">个人收支</string>

    <string name="login_out">退\t\t出</string>
    <string name="personal_account">私人账单</string>
    <string name="group_account">集体账单</string>
    <string name="setting">设\t\t置</string>
    <string name="ee">私人账单</string>


    <string name="login">登录</string>
    <string name="Username">手机号码</string>
    <string name="Password">验证码</string>
    <string name="forgot_your_password">忘记密码</string>
    <string name="go">GO</string>
    <string name="repeat_password">再次输入密码</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>
    <string name="send_verify_code">获取验证码</string>
    <string name="toast_username_not_null">手机号不能为空！</string>
    <string name="toast_verify_code_not_null">验证码不能为空！</string>
    <string name="most_expensive_account">最贵交易</string>
    <string name="pay_cumulative">收支累计</string>
    <string name="ok">ok</string>
    <string name="whole_parts_name">全部</string>
    <string name="participants">参与人</string>
    <string name="consumption_types">消费类型</string>

    <string name="daily_use">生活用品</string>
    <string name="stay_hotel">住店</string>
    <string name="travel">出行</string>
    <string name="entertainment">文化娱乐</string>
    <string name="other">其他</string>

    <string name="reset">重置</string>
    <string name="confirm">确认</string>
    <string name="screen">筛选</string>
    <string name="count_of_money">金额</string>
    <string name="date">日期</string>
    <string name="group_name_input">请输入组名</string>
    <string name="group_desc_input">描述</string>
</resources>
