<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/account"
            android:title="@string/personal_account" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/group"
            android:title="@string/group_account" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/group_account" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="System">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/icon_setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/icon_out"
                android:title="@string/login_out" />
        </menu>
    </item>

</menu>
