<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/nav_header_vertical_spacing">

            <TextView
                android:id="@+id/screen_popup_parts_title"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/participants"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/screen_popup_parts_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/shape_screen_bg"
                android:drawableRight="@drawable/screen_arrow"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/whole_parts_name"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/screen_popup_types_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/consumption_types"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

                <TextView
                    android:id="@+id/grid_all"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_cunsumption_types_selector"
                    android:gravity="center"
                    android:text="@string/whole_parts_name"
                    android:textColor="@color/text_title_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/grid_daily"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_cunsumption_types_selector"
                    android:gravity="center"
                    android:text="@string/daily_use"
                    android:textColor="@color/text_title_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/grid_hotel"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_cunsumption_types_selector"
                    android:gravity="center"
                    android:text="@string/stay_hotel"
                    android:textColor="@color/text_title_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/grid_travel"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_cunsumption_types_selector"
                    android:gravity="center"
                    android:text="@string/travel"
                    android:textColor="@color/text_title_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/grid_entertain"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_cunsumption_types_selector"
                    android:gravity="center"
                    android:text="@string/entertainment"
                    android:textColor="@color/text_title_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/grid_other"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_cunsumption_types_selector"
                    android:gravity="center"
                    android:text="@string/other"
                    android:textColor="@color/text_title_color"
                    android:textSize="12sp" />
            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/consumption_types"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.bo.customview.DateZoneChooserView
                android:id="@+id/date_zone_chooser"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ececec" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reset"
            android:textSize="14sp"
            android:textColor="@color/text_title_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#E3562F"
            android:text="@string/confirm"
            android:textSize="14sp"
            android:textColor="@color/text_title_color" />
    </LinearLayout>
</LinearLayout>