<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="300dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:id="@+id/cv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <View
                    android:layout_marginTop="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_width="8dp"
                    android:layout_height="45dp"
                    android:background="#2fa881"
                    />
                <TextView
                    android:id="@+id/tv_login_title"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/login"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinput_phone"
                    android:textColorHint="#c5c5c5"
                    android:layout_width="match_parent"
                    android:layout_alignLeft="@id/tv_login_title"
                    android:layout_below="@id/tv_login_title"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:paddingTop="10dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_marginTop="10dp"
                        android:textSize="13sp"
                        android:hint="@string/Username"
                        android:textColor="#2fa881"
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinput_code"
                    android:textColorHint="#c5c5c5"
                    android:layout_alignLeft="@id/tv_login_title"
                    android:layout_below="@id/textinput_phone"
                    android:layout_marginTop="10dp"
                    android:paddingTop="10dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="13sp"
                        android:hint="@string/Password"
                        android:textColor="#2fa881"
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/tv_login_getCode"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/textinput_code"
                    android:layout_alignBottom="@id/textinput_code"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:text="@string/send_verify_code"
                    />
                <Button
                    android:id="@+id/bt_go"
                    android:background="@drawable/bt_shape"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tv_login_getCode"
                    android:layout_marginTop="30dp"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/go"
                    android:textColor="#d3d3d3"
                    >
                </Button>
<!--            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#9a9a9a"
                android:visibility="gone"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                />-->
            </RelativeLayout>
    </android.support.v7.widget.CardView>

<!--    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        android:layout_alignTop="@id/cv"
        android:layout_marginTop="25dp"
        android:layout_alignEnd="@id/cv"
        android:layout_marginEnd="-20dp"
        />-->

</RelativeLayout>
